[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[features]
id = ["dep:derive_more"]
test-utils  = []

[dependencies]
derive_more = { version = "2.1.1", features = ["display"], optional =true }

[dev-dependencies]
pretty_assertions = "1.4.1"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"
debug = true

[workspace]
members = []
resolver = "2"

[lints]
workspace = true

[workspace.lints.rust]
warnings = "deny"
dead_code = "allow"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
restriction = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

allow_attributes_without_reason = "allow"
arbitrary_source_item_ordering = "allow"
arithmetic_side_effects = "allow"
as_conversions = "allow"
blanket_clippy_restriction_lints = "allow"
cfg_not_test = "allow"
dbg_macro = "allow"
default_numeric_fallback = "allow"
derive_partial_eq_without_eq = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
expect_used = "allow"
field_scoped_visibility_modifiers = "allow"
float_arithmetic = "allow"
from_iter_instead_of_collect = "allow"
impl_trait_in_params = "allow"
implicit_return = "allow"
indexing_slicing = "allow"
integer_division = "allow"
integer_division_remainder_used = "allow"
iter_over_hash_type = "allow"
len_without_is_empty = "allow"
let_underscore_must_use = "allow"
let_underscore_untyped = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
missing_trait_methods = "allow"
module_name_repetitions = "allow"
modulo_arithmetic = "allow"
needless_raw_strings = "allow"
non_ascii_literal = "allow"
option_if_let_else = "allow"
panic = "allow"
partial_pub_fields = "allow"
pattern_type_mismatch = "allow"
print_stderr = "allow"
print_stdout = "allow"
pub_use = "allow"
pub_with_shorthand = "allow"
question_mark_used = "allow"
redundant_test_prefix = "allow"
ref_patterns = "allow"
renamed_function_params = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
should_panic_without_expect = "allow"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
suboptimal_flops = "allow"
unimplemented = "allow"
unreachable = "allow"
unseparated_literal_suffix = "allow"
unused_trait_names = "allow"
unwrap_used = "allow"
use_debug = "allow"
wildcard_enum_match_arm = "allow"
